Award types, CSS, images and some API changes

--- a/app/assets/stylesheets/application.css.erb
+++ b/app/assets/stylesheets/application.css.erb
@@ -172,7 +172,7 @@ hr { background-color: #bbb; border: none; color: #bbb; height: 1px; }
 
 .breadcrumbs { }
 #content .breadcrumbs ol { margin: 0; }
-.breadcrumbs li { background: url(<%= asset_path 'breadcrumb.png' %>) no-repeat left 3px; display: inline; padding: 0px 6px 0px 12px; }
+.breadcrumbs li { background: url(<%= asset_path 'breadcrumb.png' %>) no-repeat left 4px; display: inline; padding: 0px 6px 0px 12px; }
 .breadcrumbs li a { text-decoration: none; font-size: 12px; }
 .breadcrumbs li a:hover { color: #888; }                 
 
@@ -184,4 +184,7 @@ hr { background-color: #bbb; border: none; color: #bbb; height: 1px; }
 	height: 14px; 
 	width: 14px; 
 }  
-.breadcrumbs li.crumb_home a:hover { opacity: 0.5; }
+.breadcrumbs li.crumb_home a:hover { opacity: 0.5; }     
+
+a.action { border: 1px solid #ccc; display: inline-block; margin-top: 1.8em; padding: 5px 8px; }
+a.action:hover, a.action:active { border-color: #999; color: #333; }
