--- a/app/assets/stylesheets/application.css.erb
+++ b/app/assets/stylesheets/application.css.erb
@@ -1,6 +1,6 @@
 /*
  *= require 'reset.css'
- *= require_self
+ *= require_self      
  *= require_tree . 
 */                       
 
@@ -63,12 +63,12 @@ body { background: #111111; font-family: 'Helvetica Neue', Helvetica, Arial, san
 
 /** Content Styles **/
               
-#content h1, h2, h3, h4 { color: #B63322; font-weight: lighter; margin-bottom: 15px; }
-#content h1 { font-size: 38px; line-height: 38px; margin: 10px 0px 15px; }
-#content h2 { font-size: 32px; margin: 25px 0px 15px; }
-#content h3 { font-size: 18px; }
-#content h4 { font-size: 16px; }
-#content p { line-height: 18px; margin: 12px 0px; }                                      
+#content h1, h2, h3, h4 { color: #B63322; font-family: 'Bitter', serif; font-weight: lighter; margin-bottom: 15px; }
+#content h1 { font-size: 2.8em; line-height: 38px; margin: 0.3em 0; }
+#content h2 { font-size: 2.2em; margin: 25px 0px 15px; }
+#content h3 { font-size: 1.8em; }
+#content h4 { font-size: 1.2em; }
+#content p { color: #555; font-size: 1.2em; line-height: 1.2em; margin: 0.5em 0; }                                      
 
 #content ol, #content ul { margin: 12px 0px 12px 20px; }
 #content ol li { list-style: decimal outside; margin-bottom: 2px; } 
@@ -186,5 +186,7 @@ hr { background-color: #bbb; border: none; color: #bbb; height: 1px; }
 }  
 .breadcrumbs li.crumb_home a:hover { opacity: 0.5; }     
 
-a.action { border: 1px solid #ccc; display: inline-block; margin-top: 1.8em; padding: 5px 8px; }
+a.action { border: 1px solid #ccc; display: inline-block; margin: 1.8em 0 0.8em; padding: 5px 8px; }
 a.action:hover, a.action:active { border-color: #999; color: #333; }
+                                                                       
+.success { background: #DCFFE2; border: 1px solid #57894B; font-size: 1.2em; margin: 0 0 1em; padding: 0.8em; }
