--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" /> 
 
     <title><%= (content_for?(:title)) ? content_for(:title) + " - " : "" %>Rewired State</title>
-
+                                                 
     <%= stylesheet_link_tag    "application" %>
     <%= javascript_include_tag "application" %>
 
@@ -59,5 +59,7 @@
             <div class="clear"></div>
         </div>
     </div>
-
+            
+    <%= stylesheet_link_tag    "http://fonts.googleapis.com/css?family=Bitter" %>
 </body>
+</html>
