Events page styled, ready for preview release

--- a/app/assets/stylesheets/application.css.erb
+++ b/app/assets/stylesheets/application.css.erb
@@ -63,7 +63,7 @@ body { background: #111111; font-family: 'Helvetica Neue', Helvetica, Arial, san
 
 /** Content Styles **/
               
-#content h1, h2, h3, h4 { color: #B63322; font-family: 'Bitter', serif; font-weight: lighter; margin-bottom: 15px; }
+#content h1, h2, h3, h4 { color: #B63322; font-family: 'Bitter', Helvetica, Arial, sans-serif; font-weight: lighter; margin-bottom: 15px; }
 #content h1 { font-size: 2.8em; line-height: 38px; margin: 0.3em 0; }
 #content h2 { font-size: 2.2em; margin: 25px 0px 15px; }
 #content h3 { font-size: 1.8em; }
