--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -11,7 +11,7 @@
     <p>
         <%= f.label :my_secret, "Event Password <span>*</span>".html_safe %>
         <%= f.text_field :my_secret %>
-        <span class="field_description">Enter the event password, as given out at the event, to <%= (@project.new_record?) ? "add" : "make changes to" %> this project.</span>
+        <span class="field_description">Enter the event password, as given out at the hack day, to <%= (@project.new_record?) ? "add" : "update" %> this project.</span>
     </p> 
 </fieldset>
 <% elsif !@project.new_record? -%>
@@ -52,21 +52,27 @@
     <%= f.text_area :description %>                          
     <span class="field_description">Tell us about your project. You can use Markdown in this field.</span>
 </p>                                                                                
+<% unless @project.data.empty? %>
 <p>
     <%= f.label :data, "Data used in your project" %>
     <%= f.text_area :data %>                          
     <span class="field_description">What data did you use in your project? You can use Markdown in this field.</span>
 </p>
+<% end -%>
+<% unless @project.ideas.empty? %>
 <p>
     <%= f.label :ideas, "Ideas for taking your project forwards" %>
     <%= f.text_area :ideas %>                          
     <span class="field_description">What else would you like to add to your project? You can use Markdown in this field.</span>
-</p>
+</p>                    
+<% end -%>
+<% unless @project.costs.empty? %>
 <p>
     <%= f.label :costs, "Costs for taking your project forwards" %>
     <%= f.text_area :costs %>                          
     <span class="field_description">What costs, if any, are involved in taking your project forwards? You can use Markdown in this field.</span>
-</p>     
+</p>
+<% end -%>     
 </fieldset> 
 
 <fieldset>
