--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -52,21 +52,21 @@
     <%= f.text_area :description %>                          
     <span class="field_description">Tell us about your project. You can use Markdown in this field.</span>
 </p>                                                                                
-<% unless @project.data.empty? %>
+<% unless @project.data.nil? or @project.data.empty? %>
 <p>
     <%= f.label :data, "Data used in your project" %>
     <%= f.text_area :data %>                          
     <span class="field_description">What data did you use in your project? You can use Markdown in this field.</span>
 </p>
 <% end -%>
-<% unless @project.ideas.empty? %>
+<% unless @project.ideas.nil? or @project.ideas.empty? %>
 <p>
     <%= f.label :ideas, "Ideas for taking your project forwards" %>
     <%= f.text_area :ideas %>                          
     <span class="field_description">What else would you like to add to your project? You can use Markdown in this field.</span>
 </p>                    
 <% end -%>
-<% unless @project.costs.empty? %>
+<% unless @project.costs.nil? or @project.costs.empty? %>
 <p>
     <%= f.label :costs, "Costs for taking your project forwards" %>
     <%= f.text_area :costs %>                          
