Project URL no longer required

--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -35,7 +35,7 @@
         <span class="field_description">Who built this project?</span>
     </p>
     <p>
-        <%= f.label :url, "Project URL <span>*</span>".html_safe %>
+        <%= f.label :url, "Project URL".html_safe %>
         <%= f.text_field :url %> 
         <span class="field_description">The URL to the website or prototype of your project.</span>
     </p>
