--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -8,12 +8,12 @@
     <%= link_to "See the full event details", "http://rewiredstate.org/events/#{@event.slug}" %>
 </div>
                          
-<% if @event.award_winners.count > 0 -%>
+<% if @event.winners.count > 0 -%>
 <div class="winners">
     <h2>Winners</h2>
     
-    <ul><% @event.awards.each do |award| -%>
-        <%= render :partial => 'single_project', :locals => {:project => award.project, :winners => true} %>
+    <ul><% @event.winners.each do |project| -%>
+        <%= render :partial => 'single_project', :locals => {:project => project, :winners => true} %>
     <% end -%>
     </ul>
 </div>
