Tidy up project pages

--- a/app/assets/stylesheets/projects.css.scss.erb
+++ b/app/assets/stylesheets/projects.css.scss.erb
@@ -1,7 +1,9 @@
 #project_control {
 
-    h1, h2 { display: inline-block; vertical-align: top; }
-	h2 { font-size: 22px; padding-left: 10px; color: #666; }
+  h1, h2 { display: inline-block; vertical-align: baseline; }
+	h2 { font-size: 22px; padding-left: 10px; color: #666; line-height: 27px; margin: 0em auto; }
+
+  .left.heading { width: 700px; margin: 0.5em 0 2em; }
 
 	.feature { background: #fff; border: 1px solid #ccc; float: left; height: 320px; width: 540px; }
 	.feature.empty { text-align: center; 
