--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,29 +1,29 @@
 <% content_for(:title) { "#{@event.title}" } %>
 
 <div class="left"><h1><%= @event.title %></h1></div>
-<div class="right"><%= link_to "New project", new_event_project_url(@event), :class => 'action' %></div> 
-<div class="clear"></div>   
+<div class="right"><%= link_to "New project", new_event_project_url(@event), :class => 'action' %></div>
+<div class="clear"></div>
 
 <div class="migrate_rs">
     <%= link_to "See the full event details", "http://rewiredstate.org/events/#{@event.slug}" %>
 </div>
-                         
+
 <% if @event.winners.count > 0 -%>
 <div class="winners">
-    <h2>Winners</h2>
-    
+    <h2><%= pluralize @event.winners.count, "winner" %></h2>
+
     <ul><% @event.winners.each do |project| -%>
         <%= render :partial => 'single_project', :locals => {:project => project, :winners => true} %>
     <% end -%>
     </ul>
 </div>
 <% end -%>
-                                                                          
+
 <div class="projects">
-    <h2>All projects</h2>
+    <h2>All <%= pluralize @event.projects.size, "projects" %></h2>
 	<ul>
 		<% @event.projects.each do |project| -%>
 		    <%= render :partial => 'single_project', :locals => {:project => project, :winners => false} %>
 		<% end -%>
-	</ul>             
+	</ul>
 </div>
