--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,7 +1,7 @@
 <% content_for(:title) { "#{@event.title}" } %>
 
 <div class="left"><h1><%= @event.title %></h1></div>
-<div class="right"><%= link_to "New project", new_event_project_url(@event), :class => 'action' %></div>
+<div class="right"><%= link_to "New project", new_event_project_path(@event), :class => 'action' %></div>
 <div class="clear"></div>
 
 <div class="migrate_rs">
