Re-enable Google Web Font loading

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -67,6 +67,6 @@
     </div>
   </div>
 
-  <%#= stylesheet_link_tag "http://fonts.googleapis.com/css?family=Bitter" %>
+  <%= stylesheet_link_tag "http://fonts.googleapis.com/css?family=Bitter" %>
 </body>
 </html>
